--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ body {
 }
 .mymargin-1{
   margin-top:60px;
+  margin-bottom:auto;
 }
 /* Header */
 header {
@@ -28,12 +29,7 @@ header {
   z-index: 10;
 }
 
-/* 主內容區 */
-main {
-  max-width: 800px;
-  margin: 0 auto;
-  padding: 2rem;
-}
+
 
 section {
   margin-bottom: 2rem;
@@ -47,18 +43,18 @@ ul {
 /* Footer */
 footer {
   background-color: rgb(175, 175, 175);
-  text-align: center;
-  font-weight: bold;
   width: 100%;
-  height: 10vh;
+  height: 5vh;
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   margin-top: 1rem;
 }
 footer p {
-  text-align: center;
   font-size: 1.2em;
+  margin: 0;
+  font-weight: bold;
 }
 /* 響應式設計 */
 @media (max-width: 600px) {
