--- a/css/booking.css
+++ b/css/booking.css
@@ -2,7 +2,7 @@
 
 /* 整體容器 */
 .container {
-    height: 100%;
+    height: 100vh;
     max-width: 700px;
     margin: 40px auto;
     padding: 20px;
