--- a/css/reviews.css
+++ b/css/reviews.css
@@ -8,7 +8,7 @@ body {
 .container {
     max-width: 600px;
     height: 1000px;
-    margin: 0 auto;
+    margin: 66px auto;
     background: white;
     padding: 20px;
     border-radius: 10px;
@@ -44,9 +44,8 @@ button:hover {
     background-color: #0056b3;
 }
 
-h1,
-h2 {
-    color: #007BFF;
+h1{
+    text-align: center;
 }
 
 #reviews>div {
